# bedrock-voice-chat

./: .drone.yml  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CLA.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE.md  PRIVACY_STATEMENT.md  README.md  bandwidth_analysis.md  config.hcl  index.html  index.js  package.json  postcss.config.js  tailwind.config.js
client/src-tauri/: .gitignore  Cargo.toml  Entitlements.macos.plist  ExportOptions.ios.plist  Info.ios.plist  Info.macos.plist  Info.plist  build.rs  data.json  tauri.conf.debug.json  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/capabilities/: default.json  desktop.json  mobile.json
client/src-tauri/examples/: feedback.rs  render_audio.rs
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/analytics/: mod.rs
client/src-tauri/src/api/: audio_library.rs  client.rs  commands.rs  mod.rs
client/src-tauri/src/audio/: actions.rs  device.rs  encode.rs  mod.rs  tests.rs  types.rs
client/src-tauri/src/auth/: code_login.rs  commands.rs  hytale.rs  login.rs  mc_oauth_window.rs  mod.rs  ncryptf.rs
client/src-tauri/src/commands/: about.rs  analytics.rs  audio.rs  audio_library.rs  env.rs  feature_flags.rs  keybinds.rs  keyring.rs  mod.rs  network.rs  recordings.rs  updater.rs  websocket.rs
client/src-tauri/src/core/: mod.rs  stream_trait.rs
client/src-tauri/src/deep_links/: handler.rs  mod.rs
client/src-tauri/src/events/: change_audio_device_event.rs  change_network_stream_event.rs  listener_trait.rs  mod.rs  stop_audio_device_event.rs
client/src-tauri/src/feature_flags/: feature_flag_service.rs  mod.rs
client/src-tauri/src/invocations/: credentials.rs  mod.rs  network.rs  stream.rs
client/src-tauri/src/keybinds/: listener.rs  mod.rs
client/src-tauri/src/keyring/: certificate_validator.rs  mod.rs  service.rs
client/src-tauri/src/logging/: mod.rs  sentry.rs  telemetry.rs
client/src-tauri/src/network/: mod.rs
client/src-tauri/src/structs/: app_state.rs  mod.rs  onboarding_state.rs
client/src-tauri/src/websocket/: mod.rs
common/: Cargo.toml
common/.cargo/: config.toml
common/src/: certificates.rs  encoding.rs  lib.rs  mtlsprovider.rs  ncryptflib.rs  redis.rs
common/src/auth/: hytale.rs  minecraft.rs  mod.rs  provider.rs  token.rs  xbl.rs
common/src/auth/hytale/: mod.rs
common/src/auth/minecraft/: mod.rs
common/src/auth/provider/: mod.rs
common/src/consts/: audio.rs  mod.rs  redis.rs  variant.rs  version.rs
common/src/errors/: mod.rs
common/src/errors/communication/: communication_error.rs  game_error.rs  generic.rs  hytale.rs  minecraft.rs  mod.rs
common/src/game_data/: hytale.rs  minecraft.rs  mod.rs
common/src/players/: generic.rs  hytale.rs  minecraft.rs  mod.rs  player_enum.rs  tests.rs
common/src/pool/: mod.rs  redis.rs  seaorm.rs
common/src/request/: audio.rs  code_login_request.rs  link_java_identity_request.rs  login.rs  mod.rs
common/src/request/audio/: list.rs  mod.rs  stop.rs
common/src/response/: api_config.rs  audio_event_response.rs  audio_file_response.rs  auth.rs  error.rs  gamerpic_response.rs  link_java_identity_response.rs  login.rs  mod.rs  paginated.rs
common/src/response/audio/: error.rs  event.rs  file.rs  mod.rs  stream_token.rs
common/src/rustls/: http_client.rs  mod.rs
common/src/structs/: audio.rs  channel.rs  channel_player.rs  config.rs  keybinds.rs  mod.rs  ncryptf_json.rs  network.rs  onboarding.rs  packet.rs  player_source.rs  recording.rs  spatial_audio_config.rs
common/src/structs/analytics/: analytics_event.rs  analytics_event_data.rs  mod.rs
common/src/structs/audio/: audio_device.rs  audio_device_host.rs  audio_device_type.rs  audio_format.rs  format.rs  mod.rs  mute_event.rs  player_gain_store.rs  stream_config.rs  stream_event.rs
common/src/structs/channel/: channel.rs  channel_collection.rs  channel_event.rs  channel_events.rs  collection.rs  event.rs  events.rs  mod.rs
common/src/structs/channels/: channel.rs  mod.rs
common/src/structs/config/: api_config.rs  hytale_auth_status.rs  hytale_device_flow_start_response.rs  hytale_device_flow_status_response.rs  keypair.rs  login_request.rs  login_response.rs  mod.rs  stream_type.rs
common/src/structs/events/: deeplink.rs  mod.rs
common/src/structs/game/: coordinate.rs  data.rs  game.rs  game_data_payload.rs  identity.rs  mod.rs  orientation.rs  player.rs
common/src/structs/keybinds/: action.rs  config.rs  mod.rs  ptt_event.rs  (+1 more)
common/src/traits/: mod.rs  player_data.rs  stream_trait.rs
common/websocket-types/: Cargo.toml
common/websocket-types/src/: command.rs  device_type.rs  error_response.rs  lib.rs  success_response.rs
entity/: Cargo.toml
entity/src/entities/: player.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231220_000001_player.rs  main.rs
pack/: .gitignore  .mcattributes  Cargo.toml
pack/pack/: .gitignore  Cargo.toml
pack/pack/bp/: manifest.json
pack/pack/rp/: manifest.json
pack/src/: main.rs
pack/src/commands/: dev.rs  mod.rs  package.rs
pack/src/js/: version.js
server/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
server/.cargo/: config.toml
server/.docker/: Dockerfile.rabbitmq  rabbitmq.conf
server/entity/: Cargo.toml
server/examples/: broadcast.rs  client.rs  connect_test.rs  coordinates.rs  http_client.rs  server.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20231220_000001_player.rs  m20260119_000001_player_game.rs  m20260222_000001_audio_file.rs  m20260307_000001_player_identity.rs  m20260311_000001_player_auth_code.rs  m20260322_000001_audio_file.rs  m20260322_000002_player_permission.rs
server/server/: Cargo.toml
server/server/.cargo/: config.toml
server/server/.systemd/: bvc-server.service
server/server/examples/: broadcast.rs  channel_events.rs  http_client.rs  openapi_spec.rs
server/server/src/: lib.rs  main.rs
server/src/: main.rs
server/src/commands/: mod.rs  server.rs
server/src/config/: app.rs  mod.rs
server/src/rs/: certificates.rs  mod.rs
(+1052 files in other folders)
