[workspace]
members = ["common", "common/websocket-types", "client/src-tauri"]
resolver = "2"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 4
lto = true
incremental = false

[profile.dev]
opt-level = 1
debug = 1
strip = "symbols"
incremental = true
codegen-units = 4

[patch.crates-io]
tauri-plugin-deep-link = { git = "https://github.com/charlesportwoodii/tauri-plugin-deep-link", branch = "master" }
sentry = { git = "https://github.com/Alaydriem/sentry-rust", branch = "0.46.x" }
sentry-rust-minidump = { git = "https://github.com/Alaydriem/sentry-rust-minidump", branch = "master" }
