[package]
name = "bedrock-voice-chat"
authors = ["Charles R. Portwood II <charlesportwoodii@erianna.com>"]
description = "Bedrock Voice Chat for Minecraft Bedrock"
repository = "https://github.com/alaydriem/bedrock-voice-chat"
version = "0.0.1"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

[dependencies]
copy_dir = {version = "^0.1" }
notify = { version = "^5.1", default-features = false, features = ["macos_kqueue"] }
tokio = { version = "^1.11", features = ["full"] }
clap = { version = "^4.0", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
anyhow = { version = "^1.0" }
zip = { version = "^0.6" }
walkdir = { version = "^2.3" }
fs_extra = { version = "^1.3.0" }
