[package]
name = "bedrock-voice-chat-client"
version = "0.1.14"
description = "Bedrock Voice Chat Client"
authors = ["Charles R. Portwood II"]
edition = "2024"
default-run = "bedrock-voice-chat-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bvc_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.4", features = [] }

[dependencies]
common = { path = "./../../common", features = ["quic", "audio", "browser"] }
tokio = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
base64 = { version = "^0.22" }
serde_json = "^1"
rust-argon2 = { version = "^2.1", optional = true }
log = "^0.4"
anyhow = { version = "^1" }
spmc = { version = "^0.3" }
rand = { version = "^0.9" }
rodio = { version = "^0.21" }
bytes = { version = "^1.10" }
async-mutex = { version = "^1.4" }
moka = { version = "^0.12", features = ["future", "sync"] }
opus2 = { version = "^0.3" }
ron = { version = "^0.12" }
audio-gate = { version = "^0.1" }
flume = { version = "^0.12" }
futures-util = "^0.3"
tokio-tungstenite = "^0.28"
trust-dns-resolver = { version = "^0.23", features = ["tokio-runtime", "tokio-rustls", "rustls", "serde"] }
ts-rs = { version = "^11.0" }
ringbuf = "^0.4"
schemars = { version = "^1.0", features = ["derive"] }
tauri = { version = "^2", features = ["rustls-tls"] }
tauri-plugin-opener = "^2"
tauri-plugin-deep-link = "^2"
tauri-plugin-fs = "^2"
tauri-plugin-http = { version = "^2", default-features = false, features = [
  "rustls-tls",
  "charset",
  "cookies",
  "http2",
] }
tauri-plugin-audio-permissions = { git = "https://github.com/charlesportwoodii/tauri-plugin-audio-permissions" }
tauri-plugin-keyring = { git = "https://github.com/charlesportwoodii/tauri-plugin-keyring" }
tauri-plugin-store = "^2"
tauri-plugin-notification = "^2"
tauri-plugin-log = "^2"
tauri-plugin-os = "^2"
once_cell = { version = "^1.21", features = ["atomic-polyfill"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart"], default-features = false }
nano-wal = { version ="^0.5" }
uuid = { version = "^1.18", features = ["v7"] }
postcard = { version = "^1.0", features = ["alloc"] }
bwavfile = "2.0.1"
chrono = "^0.4"
async-trait = "^0.1"

# MP4 muxing with Opus support
shiguredo_mp4 = "2025.3.0"

# Desktop Targets
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance =  { version = "^2.3", features = ["deep-link"] }
tauri-plugin-updater = "^2.9"
tauri-plugin-process = "^2.3"

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows-targets = "^0.53.0"
cpal = { version = "^0.16", features = ["asio", "asio-sys"] }

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
cpal = { version = "^0.16" }

[dev-dependencies]

[features]
asyncapi-docs = ["dep:serde_yaml"]

[dependencies.serde_yaml]
version = "^0.9"
optional = true

[[bin]]
name = "generate-asyncapi-docs"
path = "src/bin/generate_asyncapi_docs.rs"
required-features = ["asyncapi-docs"]
