[package]
name = "bedrock-voice-chat-client"
version = "1.0.0-beta.9"
description = "Bedrock Voice Chat Client"
authors = ["Charles R. Portwood II"]
edition = "2024"
default-run = "bedrock-voice-chat-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bvc_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.4", features = [] }

[dependencies]
common = { path = "./../../common", features = ["quic", "audio", "browser"] }
websocket-types = { path = "./../../common/websocket-types" }
tokio = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
base64 = { version = "^0.22" }
serde_json = { version = "^1" }
log = { version = "^0.4" }
anyhow = { version = "^1" }
spmc = { version = "^0.3" }
rand = { version = "^0.10" }
rodio = { version = "0.22.2" }
bytes = { version = "^1.11.1" }
async-mutex = { version = "^1.4" }
moka = { version = "^0.12", features = ["future", "sync"] }
opus2 = { version = "^0.3" }
ron = { version = "^0.12" }
audio-gate = { version = "^0.2" }
flume = { version = "^0.12" }
rubato = { version = "^1" }
audioadapter-buffers = { version = "^2" }
futures-util = { version = "^0.3" }
tokio-tungstenite = { version = "^0.28" }
trust-dns-resolver = { version = "^0.23", features = ["tokio-runtime", "tokio-rustls", "rustls", "serde"] }
ringbuf = { version = "^0.4" }
schemars = { version = "^1.0", features = ["derive"] }
ts-rs = { version = "^12.0" }
tauri = { version = "^2", features = ["rustls-tls"] }
tauri-plugin-opener = { version = "^2" }
tauri-plugin-deep-link = { git = "https://github.com/charlesportwoodii/tauri-plugin-deep-link", branch = "master" }
tauri-plugin-fs = { version = "^2" }
tauri-plugin-http = { version = "^2", default-features = false, features = [
  "rustls-tls",
  "charset",
  "cookies",
  "http2",
] }
tauri-plugin-audio-permissions = { git = "https://github.com/charlesportwoodii/tauri-plugin-audio-permissions" }
tauri-plugin-keyring = { git = "https://github.com/charlesportwoodii/tauri-plugin-keyring" }
tauri-plugin-store = { version = "^2" }
tauri-plugin-notification = { version = "^2" }
tauri-plugin-log = { version = "^2" }
tauri-plugin-os = { version = "^2" }
once_cell = { version = "^1.21", features = ["atomic-polyfill"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart"], default-features = false }
nano-wal = { version ="^0.5" }
uuid = { version = "^1.18", features = ["v4", "v7"] }
postcard = { version = "^1.0", features = ["alloc"] }
bwavfile = { version = "2.0.1" }
chrono = { version = "^0.4" }
fern = { version = "^0.7" }
async-trait = { version = "^0.1" }
url = { version = "2" }
tar = { version = "^0.4" }
zstd = { version = "^0.13" }
sentry = { version = "^0.46", default-features = false, features = [
  "panic", "backtrace", "contexts", "debug-images", "anyhow", "log", "logs", "reqwest", "rustls", "tracing"
] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["registry"] }
parking_lot = { version = "^0.12" }
shiguredo_mp4 = { version = "2026.1.0" }

# Desktop Targets
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "^2.3", features = ["deep-link"] }
tauri-plugin-updater = { version = "^2.9" }
tauri-plugin-process = { version = "^2.3" }
tauri-plugin-global-shortcut = { version = "^2" }
sentry-rust-minidump = { version = "^0.14" }

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows-targets = { version = "^0.53.0" }

[dev-dependencies]

[features]
