[package]
name = "websocket-types"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-asyncapi-docs"
path = "src/bin/generate_asyncapi_docs.rs"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
schemars = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
