[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = { version = "^1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "^1.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
