[package]
name = "migration"
version = "0.1.1"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
common = { path = "../../common", features = ["server"] }
tokio = { version = "^1", features = ["full"] }
sea-orm-migration = { version = "^2.0.0-rc.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
